bingo -> bingo border + style and hover on cells

--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
                 <button type="button" class="btn btn-custom">Generate user boards</button>
             </div>
         </div>
+        <div class="row">
+            <div class="col-12 my-3 main-board">
+
+            </div>
+        </div>
     </div>
     
     
