bingo -> generate random number without repetition and highlight same bingo cell

--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
         </div>
         <div class="row">
             <div class="col-12 my-3">
-                <button type="button" class="btn btn-custom">Generate randome number</button>
+                <button id="random-btn" type="button" class="btn btn-custom">Generate randome number</button>
+            </div>
+            <div id="randNumbDiv" class="col-12 my-3">
+
             </div>
             <div class="col-12 my-3">
                     <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="addon-wrapping">
